<?xml version="1.0"?>
<package format="3">
  <name>lidar_merge</name>
  <version>0.0.1</version>
  <description>Package for merging LiDAR point clouds in ROS2</description>

  <maintainer email="hdlee@treeze-eng.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>Eigen3</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>


  <build_depend>ament_cmake</build_depend>
  <exec_depend>ament_cmake</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

